--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,11 +24,7 @@
       List of Customers
       <span class="p-input-icon-left">
         <i class="pi pi-search"></i>
-        <input
-          pInputText
-          type="text"
-          placeholder="Global Search"
-        />
+        <input pInputText type="text" placeholder="Global Search" />
       </span>
     </div>
   </ng-template>
@@ -42,7 +38,8 @@
         Country <p-sortIcon field="country.name"></p-sortIcon>
       </th>
       <th pSortableColumn="representative.name">
-        Representative <p-sortIcon field="representative.name"></p-sortIcon>
+        Representative
+        <p-sortIcon field="representative.name"></p-sortIcon>
       </th>
       <th pSortableColumn="date">
         Date <p-sortIcon field="date"></p-sortIcon>
